--- a/index.html
+++ b/index.html
@@ -3,75 +3,65 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pendaftaran</title>
+<title>Form Pendaftaran UT</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- Header -->
 <div class="form-header">
+  <img src="UT-logo.png" alt="United Tractors" class="logo">
   <h1>Form Pendaftaran</h1>
-  <p>Isi data berikut untuk mendaftar.</p>
+  <p>Silakan isi form di bawah ini untuk mendaftar.</p>
 </div>
 
+<!-- Form -->
 <div class="form-container">
   <form id="myForm">
 
     <!-- Nama -->
-    <div class="form-group">
-      <label>Nama Lengkap</label>
-      <input type="text" name="nama" required>
-    </div>
+    <label>Nama Lengkap</label>
+    <input type="text" name="nama" required>
 
     <!-- Email -->
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" name="email" required>
-    </div>
+    <label>Email</label>
+    <input type="email" name="email" required>
 
-    <!-- Jenis Kelamin -->
-    <div class="form-group">
-      <label>Jenis Kelamin</label>
-      <div class="radio-group">
-        <label><input type="radio" name="jenisKelamin" value="Laki-laki" required> Laki-laki</label>
-        <label><input type="radio" name="jenisKelamin" value="Perempuan"> Perempuan</label>
-      </div>
-    </div>
+    <!-- Nomor Telepon -->
+    <label>Nomor Telepon</label>
+    <input type="tel" name="telepon" required>
 
-    <!-- Keahlian -->
-    <div class="form-group">
-      <label>Bidang Keahlian</label>
-      <select name="keahlian" required>
-        <option value="">-- Pilih --</option>
-        <option value="Desain">Desain</option>
-        <option value="Pemrograman">Pemrograman</option>
-        <option value="Pemasaran">Pemasaran</option>
-      </select>
-    </div>
+    <!-- Pilihan Posisi -->
+    <label>Posisi yang Dilamar</label>
+    <select name="posisi" required>
+      <option value="">-- Pilih --</option>
+      <option value="Operator">Operator</option>
+      <option value="Mekanik">Mekanik</option>
+      <option value="Administrasi">Administrasi</option>
+    </select>
 
     <!-- Pesan -->
-    <div class="form-group">
-      <label>Pesan atau Catatan</label>
-      <textarea name="pesan" required></textarea>
-    </div>
+    <label>Pesan / Catatan</label>
+    <textarea name="pesan"></textarea>
 
-    <!-- Submit -->
+    <!-- Tombol -->
     <button type="submit">Kirim</button>
-
-    <!-- Status -->
     <p id="status"></p>
+
   </form>
 </div>
 
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzjxGQS_cLay66glnA9n7S1nT-J7zGHLI_K8vk8Fk-EZb0QJ12Ryp3A4q2AyH0VWZfW/exec"; 
+
 document.getElementById('myForm').addEventListener('submit', e => {
   e.preventDefault();
   
   let formData = {
     nama: e.target.nama.value,
     email: e.target.email.value,
-    jenisKelamin: e.target.jenisKelamin.value,
-    keahlian: e.target.keahlian.value,
+    telepon: e.target.telepon.value,
+    posisi: e.target.posisi.value,
     pesan: e.target.pesan.value
   };
 
@@ -88,7 +78,6 @@ document.getElementById('myForm').addEventListener('submit', e => {
   .catch(err => {
     document.getElementById('status').textContent = "❌ Gagal mengirim data.";
     document.getElementById('status').style.color = "red";
-    console.error(err);
   });
 });
 </script>
